--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- App Bar -->
   <header class="md3-top-app-bar">
     <div class="md3-top-app-bar__content">
-      <h1 class="md3-headline-medium">Order Form v1.3.21</h1>
+      <h1 class="md3-headline-medium">Order Form v1.3.29</h1>
       <div id="header-total" class="md3-title-large" style="font-weight: bold;">Total: $0.00</div>
     </div>
   </header>
@@ -94,9 +94,12 @@
     </form>
 
     <!-- Review State -->
-    <div id="review-view" class="state-view hidden" style="padding: 20px; max-width: 900px; margin: 0 auto;">
+    <div id="review-view" class="state-view hidden"
+      style="padding: 16px; max-width: 900px; margin: 0 auto; width: 100%; box-sizing: border-box;">
       <h2 class="md3-headline-medium" style="margin-bottom: 20px;">Review Your Order</h2>
-      <div id="review-summary-container"></div>
+
+      <!-- Table Container with horizontal scroll for mobile -->
+      <div id="review-summary-container" style="overflow-x: auto; width: 100%;"></div>
 
       <!-- Client Info Summary (Optional, but good for verification) -->
       <div id="review-client-info"
@@ -146,7 +149,7 @@
   <?!= include('js'); ?>
   <!-- Version Footer -->
   <div style="text-align: center; color: #aaa; font-size: 12px; padding: 20px;">
-    v1.3.21
+    v1.3.29
   </div>
 </body>
 
